hphp/hack/test/ifc/check/early_return.php.exp
File "early_return.php", line 17, characters 1-119:
Data with policy SECRET appears in context PUBLIC. (Typing[4379])
File "early_return.php", line 13, characters 17-21:
The data source with policy SECRET
File "early_return.php", line 6, characters 19-23:
The data sink with policy PUBLIC
